--- a/SyslogServerProject/SyslogServerProject.csproj
+++ b/SyslogServerProject/SyslogServerProject.csproj
@@ -10,7 +10,13 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConnectToClavisterBlacklistingApi\ConnectToClavisterBlacklisting.csproj" />
   </ItemGroup>
 
 </Project>
