--- a/SyslogServerProject/App.config
+++ b/SyslogServerProject/App.config
@@ -3,6 +3,6 @@
   <connectionStrings>
     <add name="BlacklistDBConn"
           providerName="System.Data.ProviderName"
-     connectionString="Data Source=COREIT-DRIFTSIN\\SQLEXPRESS;Initial Catalog=Coreit_clavister_blacklist;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" />
+     connectionString="Data Source=COREIT-DRIFTSIN\SQLEXPRESS;Initial Catalog=Coreit_clavister_blacklist;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
   </connectionStrings>
 </configuration>
