--- a/SyslogServerProject/App.config
+++ b/SyslogServerProject/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+
+
+  <appSettings configSource="ConnectToClavisterBlacklisting.config"/>
+   
+  
   <connectionStrings>
     <add name="BlacklistDBConn"
           providerName="System.Data.ProviderName"
