--- a/SyslogServerProject/App.config
+++ b/SyslogServerProject/App.config
@@ -2,7 +2,11 @@
 <configuration>
 
 
-  <appSettings configSource="ConnectToClavisterBlacklisting.config"/>
+   <appSettings>
+    <add key="username" value="coreit" />
+    <add key="password" value="qQrqFuGOsHO8vmvV" />
+    <add key="baseUri" value="https://81.21.224.5/" />
+  </appSettings>
    
   
   <connectionStrings>
