change link to appsetings in CreateClient

--- a/SyslogServerProject/App.config
+++ b/SyslogServerProject/App.config
@@ -2,12 +2,14 @@
 <configuration>
 
 
-   <appSettings>
+   <configSections>
+   </configSections>
+
+  <appSettings>
     <add key="username" value="coreit" />
     <add key="password" value="qQrqFuGOsHO8vmvV" />
     <add key="baseUri" value="https://81.21.224.5/" />
-  </appSettings>
-   
+  </appSettings> 
   
   <connectionStrings>
     <add name="BlacklistDBConn"
