add some comments

--- a/SyslogServerProject/App.config
+++ b/SyslogServerProject/App.config
@@ -10,6 +10,7 @@
     <add key="username" value="coreit" />
     <add key="password" value="qQrqFuGOsHO8vmvV" />
     <add key="baseUri" value="https://81.21.224.5/" />
+    <add key="highest_rep_dest_score" value="17"/>
   </appSettings> 
   
   <connectionStrings>
