--- a/SyslogServerProject/SyslogServerProject.csproj
+++ b/SyslogServerProject/SyslogServerProject.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\ConnectToClavisterBlacklistingApi\ConnectToClavisterBlacklisting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Documentations\" />
+  </ItemGroup>
+
 </Project>
