--- a/SyslogServerProject/App.config
+++ b/SyslogServerProject/App.config
@@ -11,6 +11,7 @@
     <add key="password" value="qQrqFuGOsHO8vmvV" />
     <add key="baseUri" value="https://81.21.224.5/" />
     <add key="highest_rep_dest_score" value="17"/>
+    <add key="port_number" value="514"/>
   </appSettings> 
   
   <connectionStrings>
